PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-11-27: - Upon request of Yilen Gomez, H passband intensities added
              to atmcofplanck.dat. In order to distinguish between the
              two, the name of this auxiliary file has been changed both
              in PHOEBE, as well as in the WD source, to
              phoebe_atmcofplanck.dat.
2006-08-17: - Corrections computed for passband luminosities by DC were
              overestimated if there is a significant 3rd light presence
              in the system and it was given in percents. Fixed; many
              thanks to Petr Harmanec for pointing this out!
2006-07-04: - Ethem Derman discovered a very nasty bug in parameter file
              readout that caused bad values to be read for spot parameters.
              Fixed. This is a very important fix, so a new release is in
              order: PHOEBE 0.29c is out!
            - Another bugfix... Mike Sallman reported a problem of plotting
              to png files with gnuplot; gnuplot specs have changed and I
              haven't noticed this before. This one is going to enter the
              0.29d once more important bugfixes show up.
2006-06-21: - PHOEBE 0.29b released!
              Hopefully this will be the last release of the old branch.
2006-06-20: - RV plotting window was missing "Lum:" entries in the info
              table. Because of that PHOEBE reported "Widget not found"
              issue when RV curves were plotted. Additionally, there was
              a stale printf () debugging statement that printed out the
              filter index to the terminal. All of these problems were
              fixed. Many thanks to Maja Vuckovic for pointing this out!
            - Function plot_rv_plot () has been cleaned a bit upon the
              bug report from Todd Vaccaro. I didn't manage to reproduce
              it here, but I hope that this fool-proofing will help.