@@ -123,8 +123,8 @@
   -0.266349326D+02   0.107544127D+03  -0.125688040D+03   0.105164101D+03  -0.680523989D+02   0.346044351D+02  -0.136289697D+02   0.397321267D+01  -0.774683362D+00   0.769976427D-01
   -0.337309790D+02   0.130571036D+03  -0.157757619D+03   0.136757983D+03  -0.917696412D+02   0.483831678D+02  -0.197427358D+02   0.595696113D+01  -0.120089462D+01   0.123331020D+00
    0.117420306D+01   0.429190738D+02  -0.508330871D+02   0.434412814D+02  -0.287878780D+02   0.150047653D+02  -0.605801175D+01   0.180986715D+01  -0.361492611D+00   0.368033538D-01
-  -2.160470003E+02   5.761369576E+02  -6.863819090E+02   5.844377698E+02  -3.847361473E+02   1.989306757E+02  -7.961725644E+01   2.356903649E+01  -4.662913565E+00   4.699471742E-01
-  -6.798783672E+00   4.906963947E+01  -5.553770364E+01   4.524276513E+01  -2.857889035E+01   1.421523972E+01  -5.486591763E+00   1.570078030E+00  -3.009607969E-01   2.945273937E-02
-  -1.501908457E+00   3.899912282E+01  -4.548269546E+01   3.825847124E+01  -2.494496839E+01   1.279074527E+01  -5.080741165E+00   1.493698688E+00  -2.936559500E-01   2.943244079E-02
-  -5.432965543E+00   5.140334256E+01  -6.118132023E+01   5.247315105E+01  -3.488542818E+01   1.823785865E+01  -7.384442626E+00   2.212177943E+00  -4.430028168E-01   4.521383854E-02
-   3.018500045E+00   3.156594658E+01  -3.701989546E+01   3.142098442E+01  -2.070008286E+01   1.073220924E+01  -4.312095458E+00   1.282574252E+00  -2.551422236E-01   2.588170362E-02
+  -2.155688689E+02   5.761867603E+02  -6.864449349E+02   5.844956229E+02  -3.847777405E+02   1.989544460E+02  -7.962789929E+01   2.357260930E+01  -4.663729269E+00   4.700447290E-01
+  -6.300097410E+00   4.906561912E+01  -5.553262477E+01   4.523811940E+01  -2.857557231E+01   1.421336620E+01  -5.485771065E+00   1.569813455E+00  -3.009050233E-01   2.944720603E-02
+  -1.064580548E+00   3.915480911E+01  -4.567723623E+01   3.843354083E+01  -2.506734787E+01   1.285806323E+01  -5.109372566E+00   1.502660766E+00  -2.955094191E-01   2.962224576E-02
+  -4.927409297E+00   5.138131183E+01  -6.115339592E+01   5.244745729E+01  -3.486689675E+01   1.822722572E+01  -7.379659698E+00   2.210564216E+00  -4.426327519E-01   4.516955686E-02
+   3.519253467E+00   3.155647040E+01  -3.700780257E+01   3.140974538E+01  -2.069187019E+01   1.072742256E+01  -4.309904197E+00   1.281821683E+00  -2.549672375E-01   2.586082461E-02
